--- a/plniconweb/src/App.css
+++ b/plniconweb/src/App.css
@@ -1,4 +1,14 @@
-#root {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,600;0,700;0,800;0,900;1,400;1,600&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base{
+  html{
+    @apply font-montserrat
+  }
+}
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +49,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
