--- a/plniconweb/src/index.css
+++ b/plniconweb/src/index.css
@@ -9,72 +9,60 @@
   }
 }
 
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@responsive {
+  .header1 {
+    @apply font-bold tracking-[0.02em] leading-none text-[64px];
   }
-  a:hover {
-    color: #747bff;
+
+  .header1-mobile {
+    @apply font-bold tracking-[0.02em] leading-none text-[28px];
   }
-  button {
-    background-color: #f9f9f9;
+
+  .header2 {
+    @apply font-bold tracking-[0.02em] leading-none text-[36px];
   }
-} */
+
+  .header2-mobile {
+    @apply font-bold tracking-[0.02em] leading-none text-[20px];
+  }
+
+  .header3 {
+    @apply font-bold tracking-[0.02em] leading-none text-[24px];
+  }
+
+  .header3-mobile {
+    @apply font-bold tracking-[0.02em] leading-none text-[16px];
+  }
+
+  .body-text {
+    @apply font-normal tracking-[0.01em] leading-[1.4] text-[16px];
+  }
+
+  .small {
+    @apply font-normal text-[12px];
+  }
+
+  .very-small {
+    @apply font-normal text-[8px];
+  }
+
+  .field-text {
+    @apply font-semibold text-[16px];
+  }
+
+  .field-text-mobile {
+    @apply font-semibold text-[12px];
+  }
+
+  .body-text-mobile {
+    @apply font-normal tracking-[0.01em] leading-[1.4] text-[10px];
+  }
+
+  .button-text {
+    @apply font-semibold text-[24px];
+  }
+
+  .button-text-mobile {
+    @apply font-semibold text-[12px];
+  }
+}
